Fix gap in player chart and apply a min chart of 0 incase there are no players on server in past day so line stays at bottom and doesn't go to middle Make Loading text better centered

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -229,7 +229,6 @@ footer {
     background: transparent;
     border: 3px solid #3c3c3c;
     border-radius: 50%;
-    text-align: center;
     line-height: 20px;
     font-family: sans-serif;
     font-size: 20px;
@@ -241,7 +240,11 @@ footer {
 }
 
 #loading-text {
-    margin-top: 100px;
+    margin-top: 120px;
+    left: 72%;
+    position: relative;
+    float: left;
+    transform: translate(-50%, -50%);
 }
 
 .loading:before {
